[tool.poetry]
name = "steam-forum"
version = "0.1.0"
description = ""
authors = ["ramazanix <ramazanui2002@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
authlib = "^1.3.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
itsdangerous = "^2.2.0"
requests = "^2.32.3"
pyjwt = "^2.8.0"
pydantic-settings = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
