[tool.poetry]
name = "steam-forum"
version = "0.1.0"
description = ""
authors = ["ramazanix <ramazanui2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
authlib = "^1.3.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
itsdangerous = "^2.2.0"
requests = "^2.32.3"
pyjwt = "^2.8.0"
pydantic-settings = "^2.3.2"
aiohttp = "^3.9.5"
aiocache = "^0.12.2"
redis = {extras = ["hiredis"], version = "^5.0.7"}
fastapi-camelcase = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 88
target-version = ['py310']
include = ''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
